--- a/core/src/main/flex/org/dukecon/views/SettingsView.mxml
+++ b/core/src/main/flex/org/dukecon/views/SettingsView.mxml
@@ -106,9 +106,7 @@
         protected function onLanguageChange(event:Event):void {
             var selectedLanguage:String = String(RadioButton(event.target).value);
 
-            resourceManager.localeChain = [selectedLanguage];
-            // TODO: Implement the language change ...
-//            settingsService.selectedLanguage = String(selectedLanguage);
+            settingsService.selectedLanguageId = String(selectedLanguage);
 
             log.info("Changed language to: " + selectedLanguage);
         }
