--- a/core/src/main/flex/org/dukecon/views/ScheduleView.mxml
+++ b/core/src/main/flex/org/dukecon/views/ScheduleView.mxml
@@ -26,7 +26,6 @@
         import org.dukecon.events.ListEvent;
         import org.dukecon.services.ConferenceService;
         import org.dukecon.services.SettingsService;
-        import org.spicefactory.lib.collection.Set;
 
         [Bindable]
         protected var listData:ArrayCollection;
@@ -35,13 +34,13 @@
         public var settingsService:SettingsService;
 
         public function init():void {
-            listData = conferenceService.getConferenceDays(SettingsService.selectedConferenceId);
+            listData = conferenceService.getConferenceDays(settingsService.selectedConferenceId);
             list.addEventListener(ListEvent.ITEM_SELECTED, onDaySelected);
         }
 
         [MessageHandler]
         public function onConferenceDataChanged(event:ConferenceDataChangedEvent):void {
-            listData = conferenceService.getConferenceDays(SettingsService.selectedConferenceId);
+            listData = conferenceService.getConferenceDays(settingsService.selectedConferenceId);
         }
 
         protected function onDaySelected(event:ListEvent):void {
@@ -51,7 +50,7 @@
     </fx:Script>
 
     <s:navigationContent>
-        <s:Button label="&lt;" click="{settingsService.selectedConference = null}"/>
+        <s:Button label="&lt;" click="{settingsService.selectedConferenceId = null}"/>
     </s:navigationContent>
 
     <s:List id="list" width="100%" height="100%"
