--- a/core/src/main/flex/org/dukecon/views/StreamsView.mxml
+++ b/core/src/main/flex/org/dukecon/views/StreamsView.mxml
@@ -35,13 +35,13 @@
 
       [Init]
       public function init():void {
-        listData = streamService.getStreams(SettingsService.selectedConferenceId);
+        listData = streamService.getStreams(settingsService.selectedConferenceId);
         list.addEventListener(ListEvent.ITEM_SELECTED, onStreamSelected);
       }
 
       [MessageHandler]
       public function onConferenceDataChanged(event:ConferenceDataChangedEvent):void {
-        listData = streamService.getStreams(SettingsService.selectedConferenceId);
+        listData = streamService.getStreams(settingsService.selectedConferenceId);
       }
 
       protected function onStreamSelected(event:ListEvent):void {
@@ -51,7 +51,7 @@
     </fx:Script>
 
     <s:navigationContent>
-        <s:Button label="&lt;" click="{settingsService.selectedConference = null}"/>
+        <s:Button label="&lt;" click="{settingsService.selectedConferenceId = null}"/>
     </s:navigationContent>
 
     <s:List id="list" width="100%" height="100%" horizontalScrollPolicy="off"
