--- a/core/src/main/flex/org/dukecon/itemrenderer/GridEventItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/GridEventItemRenderer.mxml
@@ -29,7 +29,6 @@
     import org.dukecon.model.Speaker;
     import org.dukecon.services.ResourceService;
     import org.dukecon.services.UserPreferenceService;
-    import org.dukecon.utils.I18nHelper;
 
     [Bindable]
     protected var featureServerFavorites:Boolean = FEATURE::serverFavorites;
@@ -81,14 +80,29 @@
 
       titleLabel.width = width - 120;
       speakersLabel.width = width - 20;
+      abstractLabel.width = width - 20;
     }
 
     protected function update():void {
       border.visible = event != null;
       if (event) {
         titleLabel.text = event.title;
-        timeLabel.text = timeFormatter.format(event.start) + " - " + timeFormatter.format(event.end);
-        locationLabel.text = I18nHelper.getName(event.location.names, resourceManager.localeChain[0]);
+
+        var eventMinutes:Number = (event.end.time - event.start.time) / 60000;
+        var eventHours:Number = eventMinutes / 60;
+        var timeString:String = "";
+        if(eventHours > 1) {
+          timeString += Math.floor(eventHours) + " h";
+        }
+        if(eventMinutes % 60 != 0) {
+          if(timeString.length > 0) {
+            timeString += " ";
+          }
+          timeString += (eventMinutes % 60) + " min";
+        }
+        timeLabel.text = timeFormatter.format(event.start) + " (" + timeString + ")";
+
+/*        locationLabel.text = I18nHelper.getName(event.location.names, resourceManager.localeChain[0]);
         locationIcon.source = resourceService.getIconForLocation(event.location.id);
         if (event.track) {
           streamLabel.text = I18nHelper.getName(event.track.names, resourceManager.localeChain[0]);
@@ -96,10 +110,10 @@
         } else {
           streamLabel.text = null;
           streamIcon.source = null;
-        }
+        }*/
         var language:Language = event.language ? event.language : null;// TODO: Make this get the default language ;
         if(language) {
-          languageLabel.text = I18nHelper.getName(language.names, resourceManager.localeChain[0]);
+//          languageLabel.text = I18nHelper.getName(language.names, resourceManager.localeChain[0]);
           languageIcon.source = resourceService.getIconForLanguage(event.language.id);
         }
         var speakerNames:String = "";
@@ -109,22 +123,21 @@
           }
           if (speaker) {
             speakerNames += speaker.name;
-            if (speaker.company) {
-              speakerNames += " (" + speaker.company + ")";
-            }
           }
         }
         speakersLabel.text = speakerNames;
+        abstractLabel.text = event.abstractText;
       } else {
         titleLabel.text = null;
         timeLabel.text = null;
-        locationLabel.text = null;
+/*        locationLabel.text = null;
         locationIcon = null;
         streamLabel.text = null;
         streamIcon = null;
-        languageLabel.text = null;
+        languageLabel.text = null;*/
         languageIcon = null;
         speakersLabel.text = null;
+        abstractLabel.text = null;
       }
 
       updateSelectionIcon();
@@ -153,23 +166,31 @@
     ]]>
   </fx:Script>
 
-  <s:Rect id="border" top="4" left="4" right="4" bottom="4" radiusX="10" radiusY="10">
+  <s:Rect id="border" top="0" left="0" right="0" bottom="0" radiusX="0" radiusY="0">
     <s:fill>
       <s:SolidColor color="0xffffff"/>
     </s:fill>
     <s:stroke>
-      <s:SolidColorStroke color="0x000000"/>
+      <s:SolidColorStroke color="0x555555"/>
     </s:stroke>
   </s:Rect>
+  <s:Line bottom="0" left="0" right="0">
+    <s:stroke>
+      <s:SolidColorStroke color="0x1AA3B1" weight="6"/>
+    </s:stroke>
+  </s:Line>
 
-  <s:VGroup top="20" left="20" right="20" bottom="20" gap="20">
-    <s:Label id="titleLabel" height="100" styleName="talkTitle"/><!-- width="{this.width - 120}"-->
-    <s:Label id="speakersLabel" height="56" styleName="talkSpeakers"/><!-- width="{this.width - 20}"-->
-    <s:VGroup width="100%" gap="10">
-      <s:HGroup width="100%" gap="20" verticalAlign="middle">
-        <s:BitmapImage source="@Embed('/clock.png')" width="32" height="32"/>
-        <s:Label id="timeLabel" styleName="talkTime"/>
-      </s:HGroup>
+  <s:VGroup top="10" left="10" right="10" bottom="10" gap="10">
+    <s:HGroup width="100%" height="64" verticalAlign="middle">
+      <s:Label id="timeLabel" styleName="talkTime" width="100%"/>
+      <s:BitmapImage id="languageIcon"/>
+      <s:Image id="favoriteImage" click="toggleSelection(event)"/>
+    </s:HGroup>
+    <s:Label id="titleLabel" height="100" styleName="talkTitle" maxDisplayedLines="-1"/>
+    <s:Label id="speakersLabel" height="56" styleName="talkSpeakers" maxDisplayedLines="-1"/>
+    <s:Label id="abstractLabel" height="110" styleName="talkAbstract" maxDisplayedLines="-1"/>
+
+    <!--s:VGroup width="100%" gap="10">
       <s:HGroup width="100%" gap="20" verticalAlign="middle">
         <s:BitmapImage id="locationIcon" width="32" height="32"/>
         <s:Label id="locationLabel" styleName="talkLocation"/>
@@ -178,13 +199,7 @@
         <s:BitmapImage id="streamIcon" width="32" height="32"/>
         <s:Label id="streamLabel" styleName="talkStream"/>
       </s:HGroup>
-      <s:HGroup width="100%" gap="20" verticalAlign="middle">
-        <s:BitmapImage id="languageIcon" width="32" height="32"/>
-        <s:Label id="languageLabel" styleName="talkLanguage"/>
-      </s:HGroup>
-    </s:VGroup>
+    </s:VGroup-->
   </s:VGroup>
-
-  <s:Image id="favoriteImage" top="20" right="20" click="toggleSelection(event)"/>
 
 </s:GridItemRenderer>
