- Implemented a resource fallback, if the user selects an app language, that the conference doesn't support

--- a/core/src/main/flex/org/dukecon/itemrenderer/EventItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/EventItemRenderer.mxml
@@ -31,7 +31,7 @@
       }
 
       protected function update():void {
-        if (event && resourceService) {
+        if (event && event.track && resourceService) {
           streamIcon.source = resourceService.getIconForStream(event.track.id);
           titleLabel.text = event.title;
         } else {
