--- a/core/src/main/flex/org/dukecon/itemrenderer/LocationItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/LocationItemRenderer.mxml
@@ -1,7 +1,6 @@
 <?xml version="1.0"?>
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
                 xmlns:s="library://ns.adobe.com/flex/spark"
-                xmlns:comp="org.dukecon.components.*"
                 xmlns:parsley="http://www.spicefactory.org/parsley"
                 height="136"
                 click="onItemClick(event)">
@@ -41,7 +40,8 @@
         protected function update():void {
             if (location && resourceService) {
                 locationIcon = resourceService.getIconForLocation(location.id);
-                locationName = I18nHelper.getName(location.names, resourceManager.localeChain[0]);
+                locationName = I18nHelper.getName(location.names, resourceManager.localeChain[0],
+                        location.conference.metaData.defaultLanguage.id);
             } else {
                 locationIcon = null;
                 locationName = null;
